--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "css-loader": "^2.1.0",
     "live-server": "^1.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "react": "16.7.0",
+    "react-dates": "^21.8.0",
     "react-dom": "16.7.0",
     "react-modal": "^3.8.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "validator": "10.10.0",
